<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:gravity="center"
    tools:context=".activity.MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-24dp"
        app:cardElevation="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Card.TopLeftRight">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/create_an_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_an_account"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/already_have_account_linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/create_an_account">

                    <TextView
                        android:id="@+id/already_have_account"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/already_have_account"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:id="@+id/login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/login"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <View
                    android:id="@+id/dots"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/already_have_account_linear" />


                <TextView
                    android:id="@+id/enter_your_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/confirm_your_mobile_number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dots" />

                <TextView
                    android:id="@+id/code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/a_six_digit_number_is_sent_to"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="14dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enter_your_phone_number" />

                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/code"
                    app:layout_constraintTop_toBottomOf="@+id/enter_your_phone_number" />

                <LinearLayout
                    android:id="@+id/otp_view_linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/code">

                    <com.chaos.view.PinView
                        android:id="@+id/otp_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:inputType="number"
                        android:padding="0dp"
                        android:textSize="16sp"
                        app:itemCount="6"
                        app:lineWidth="1dp"
                        app:viewType="rectangle" />

                </LinearLayout>

                <TextView
                    android:id="@+id/you_can_resend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/you_can_resend_the_code"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/otp_view_linearLayout" />

                <TextView
                    android:id="@+id/count_down"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/seconds"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/you_can_resend"
                    app:layout_constraintWidth_percent=".5" />

                <TextView
                    android:id="@+id/resend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/resend"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/count_down"
                    app:layout_constraintTop_toBottomOf="@+id/you_can_resend"
                    app:layout_constraintWidth_percent=".5" />

                <Button
                    android:id="@+id/btn_continue"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_color_selector"
                    android:padding="10dp"
                    android:text="@string/txt_continue"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/btn_previous"
                    app:layout_constraintTop_toBottomOf="@+id/count_down"
                    app:layout_constraintVertical_bias="1.0"
                    tools:layout_editor_absoluteX="19dp" />

                <Button
                    android:id="@+id/btn_previous"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_color_selector"
                    android:enabled="false"
                    android:padding="10dp"
                    android:text="@string/previous"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_continue"
                    tools:layout_editor_absoluteX="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>