<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:gravity="center"
    tools:context=".activity.MainActivity">
    <!--    <androidx.cardview.widget.CardView-->
    <!--        android:id="@+id/cardViewHeader"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:layout_weight="1"-->
    <!--        android:background="@color/colorPrimary">-->

    <!--        <androidx.appcompat.widget.AppCompatImageView-->
    <!--            android:layout_width="@dimen/_20sdp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="center"-->
    <!--            android:layout_marginHorizontal="6dp"-->
    <!--            app:srcCompat="@drawable/flag_iceland" />-->

    <!--        <LinearLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:background="@color/colorPrimary"-->
    <!--            android:gravity="center_horizontal|center_vertical"-->
    <!--            android:orientation="horizontal">-->


    <!--            <androidx.appcompat.widget.AppCompatImageView-->
    <!--                android:layout_width="@dimen/_20sdp"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="bottom"-->
    <!--                android:layout_marginHorizontal="6dp"/>-->


    <!--            <androidx.appcompat.widget.AppCompatImageView-->
    <!--                android:layout_width="@dimen/_20sdp"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="bottom"-->
    <!--                android:layout_marginHorizontal="6dp />-->
    <!--        </LinearLayout>-->

    <!--    </androidx.cardview.widget.CardView>-->
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardElevation="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Card.TopLeftRight">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/create_an_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_an_account"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/already_have_account_linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/create_an_account">

                    <TextView
                        android:id="@+id/already_have_account"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/already_have_account"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:id="@+id/login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/login"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <View
                    android:id="@+id/dots"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/already_have_account_linear" />


                <TextView
                    android:id="@+id/enter_your_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/enter_mobile_number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dots" />

                <TextView
                    android:id="@+id/code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="38dp"
                    android:text="Code"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enter_your_phone_number" />

                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/code"
                    app:layout_constraintTop_toBottomOf="@+id/enter_your_phone_number" />


                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/rounded_background"
                    android:gravity="center"
                    android:padding="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/code">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/cpp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        app:ccp_defaultNameCode="BG"
                        app:ccp_showFlag="false"
                        app:ccp_showNameCode="false" />

                    <View
                        android:id="@+id/vLine"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="8dp"
                        android:layout_toEndOf="@id/cpp"
                        android:background="@color/gray" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_edt_text_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:textSize="13sp"
                        android:layout_toEndOf="@id/vLine"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/enter_mobile_number"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1" />


                </RelativeLayout>


                <Button
                    android:id="@+id/btn_continue"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_color_selector"
                    android:padding="10dp"
                    android:text="@string/txt_continue"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/btn_previous"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                    app:layout_constraintVertical_bias="1.0"
                    tools:layout_editor_absoluteX="19dp" />

                <Button
                    android:id="@+id/btn_previous"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="80dp"
                    android:background="@drawable/button_color_selector"
                    android:enabled="false"
                    android:padding="10dp"
                    android:text="@string/previous"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_continue" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>